--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".Alerts"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".HeartRate"
+        <activity android:name=".PhysicalActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".SleepActivity"
             android:screenOrientation="portrait"></activity>
