--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mcmaster.eguardian">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo"
@@ -21,10 +24,16 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name=".SleepActivity"
             android:screenOrientation="portrait"></activity>
-
+        <service
+            android:enabled="true"
+            android:name="mcmaster.eguardian.domain.BluetoothLeService">
+            <intent-filter>
+                <action android:name="mcmaster.eguardian.domain.BluetoothLeService" />
+            </intent-filter>
+        </service>
 
         <meta-data android:name="DATABASE" android:value="eguardian.db" />
-        <meta-data android:name="VERSION" android:value="2" />
+        <meta-data android:name="VERSION" android:value="3" />
         <meta-data android:name="QUERY_LOG" android:value="false" />
         <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="mcmaster.eguardian" />
     </application>
